openjdk23/jdk/test/langtools/tools/javac/annotations/neg/DupTarget.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

import static java.lang.annotation.ElementType.*;

@java.lang.annotation.Target({TYPE, FIELD, PACKAGE, FIELD})
@interface DupTarget {
}
